Fix image paths

--- a/_posts/2015-02-15-talk-24-months.md
+++ b/_posts/2015-02-15-talk-24-months.md
@@ -15,4 +15,4 @@ The way we work at Infoxchange has changed greatly.
 
 A retrospective journey into transforming Infoxchange’s technology and culture over the past 24 months - presented a Melbourne DevOps – December 2014
 
-[![Click to Start Slides](images/misc/24months.jpg)](https://ixa.io/wp-content/uploads/2014/11/24%20Months.pdf)
+[![Click to Start Slides]({{ site.url }}/images/misc/24months.jpg)](https://ixa.io/wp-content/uploads/2014/11/24%20Months.pdf)
