--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -11,6 +11,8 @@ image:
 
 Linux Kernel CI for Debian
 
+![]({{ site.url }}/images/build-passing.png)
+
 [Github: sammcj/kernel-ci](https://github.com/sammcj/kernel-ci)
 
 Those of us using technologies such as Docker and BTRFS or simply trying to gain a performance edge on the competition have a lot to gain from the features and performance of recent Kernel updates (especially from 3.18 onwards)
@@ -33,3 +35,4 @@ In addition to CI of modern Kernel images, I've also integrated (optional) patch
 -  Both ther build and the kernels Work with Debian Wheezy (7) and Jessie (8).
 -  Supports uploading built packages to a remote server and adding them to reprepro
 
+![]({{ site.url }}/images/travis.png)
