--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -15,9 +15,9 @@ Linux Kernel CI for Debian
 
 [Github: sammcj/kernel-ci](https://github.com/sammcj/kernel-ci)
 
-Those of us using technologies such as Docker and BTRFS or simply trying to gain a performance edge on the competition have a lot to gain from the features and performance of recent Kernel updates (especially from 3.18 onwards)
+Those of us using technologies such as Docker and BTRFS or simply trying to gain a performance edge on the competition have a lot to gain from the features and performance of recent Kernel updates (especially from 3.18 onwards).
 
-'Enterprise' Linux distributions such as RHEL & variants are concerning out of date when comes to the Kernel.
+'Enterprise' Linux distributions such as RHEL & variants are concerningly out of date when comes to the Kernel.
 Many people seem to have forgotten what Linux is... _Linux IS the Kernel_.
 
 Someone said to me recently 'Why do I need a more modern Kernel? - It never gives us problems!' later in the conversation they alluded to a number of performance issues they were experiencing with both a database platform and with some modern containerised applications they were trying to run. _Both of those issues were resolved several years ago in the Kernel which was newer than what they were running_.
