--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -32,7 +32,7 @@ In addition to CI of modern Kernel images, I've also integrated (optional) patch
 -  Tested with Gitlab-CI and Travis-CI but should work on any CI system.
 -  Runs in an isolated and disposble docker container.
 -  No root access required when building with Docker.
--  Both ther build and the kernels Work with Debian Wheezy (7) and Jessie (8).
+-  Both the build and the kernels Work with Debian Wheezy (7) and Jessie (8).
 -  Supports uploading built packages to a remote server and adding them to reprepro
 
 ![]({{ site.url }}/images/travis.png)
