--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -36,3 +36,5 @@ In addition to CI of modern Kernel images, I've also integrated (optional) patch
 -  Supports uploading built packages to a remote server and adding them to reprepro
 
 ![]({{ site.url }}/images/travis.png)
+
+![]({{ site.url }}/images/kernel_bash.png)
