add video link to izzy

--- a/_posts/2016-01-29-askizzy.md
+++ b/_posts/2016-01-29-askizzy.md
@@ -4,9 +4,11 @@ published: True
 tags: []
 ---
 
-# Today we launched a website for homeless people
+# Today we launched a mobile website for homeless people
 
 [![]({{ site.url }}/images/askizzy.png)](https://askizzy.org.au){: .center-image }
+
+... and it was launched by [Australia's Prime Minister](http://www.heraldsun.com.au/news/victoria/askizzy-app-connects-the-homeless-to-food-shelter-and-health-services/news-story/bfae67275552be421af4dd54bfd575a6?nk=ebd042d1d2789514c4e8553cb5633711-1454053888)
 
 #### Today we served up over 54,000 requests to the site and it's only in it's first stage of inception.
 
