--- a/_posts/2015-02-15-talk-24-months.md
+++ b/_posts/2015-02-15-talk-24-months.md
@@ -1,5 +1,6 @@
 ---
 title: Talk - 24 Months
+layout: post
 categories: []
 date:   2015-02-16 22:37:00
 ---
@@ -8,4 +9,4 @@ The way we work at Infoxchange has changed greatly.
 
 A retrospective journey into transforming Infoxchange’s technology and culture over the past 24 months - presented a Melbourne DevOps – December 2014
 
-[![Click to Start Slides]({{ site.url }}/images/misc/24months.jpg){: .center-image }](https://smcleod.net/files/24_Months.pdf)
+[![Click to Start Slides]({{ site.url }}/images/misc/24months.jpg)](https://smcleod.net/files/24_Months.pdf)
