--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -1,5 +1,6 @@
 ---
 title: Continuous integration for the Linux Kernel - Built within Docker
+layout: post
 categories: []
 date:   2015-03-15 22:37:00
 ---
@@ -31,6 +32,6 @@ In addition to CI of modern Kernel images, I've also integrated (optional) patch
 -  Both the build and the kernels Work with Debian Wheezy (7) and Jessie (8).
 -  Supports uploading built packages to a remote server and adding them to reprepro
 
-![]({{ site.url }}/images/travis.png){: .center-image }
+![]({{ site.url }}/images/travis.png)
 
-![]({{ site.url }}/images/kernel_bash.png){: .center-image }
+![]({{ site.url }}/images/kernel_bash.png)
