--- a/_posts/2016-01-29-askizzy.md
+++ b/_posts/2016-01-29-askizzy.md
@@ -1,12 +1,13 @@
 ---
 title: AskIzzy
+layout: post
 published: True
 tags: []
 ---
 
-# Today we launched a mobile website for homeless people
+## Today we launched a mobile website for homeless people
 
-[![]({{ site.url }}/images/askizzy.png)](https://askizzy.org.au){: .center-image }
+<a href="https://askizzy.org.au"><img src="{{ site.url }}/images/askizzy.png" style="width: 600px;" />
 
 ... and it was launched by [Australia's Prime Minister](http://www.heraldsun.com.au/news/victoria/askizzy-app-connects-the-homeless-to-food-shelter-and-health-services/news-story/bfae67275552be421af4dd54bfd575a6?nk=ebd042d1d2789514c4e8553cb5633711-1454053888)
 
