--- a/_posts/2015-02-15-talk-24-months.md
+++ b/_posts/2015-02-15-talk-24-months.md
@@ -1,15 +1,17 @@
 ---
 title: Talk - 24 Months
 date: 2014-10-15
-categories: storage tech talks
+categories: tech
 layout: post-sidebar
 author_name : Sam McLeod
 author_url : /author/sam
 author_avatar: sam
+author_avatar: sam
+# show_related_posts: true
 show_avatar : true
-read_time : 22
+
 feature_image: melbourne
-show_related_posts: true
+
 ---
 
 The way we work at Infoxchange has changed greatly.
