--- a/_posts/2016-01-29-askizzy.md
+++ b/_posts/2016-01-29-askizzy.md
@@ -6,10 +6,12 @@ layout: post-sidebar
 author_name : Sam McLeod
 author_url : /author/sam
 author_avatar: sam
+author_avatar: sam
+# show_related_posts: true
 show_avatar : true
-read_time : 22
+
 feature_image: melbourne
-show_related_posts: true
+
 ---
 
 ## Today we launched a mobile website for homeless people
