--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -78,7 +78,7 @@ Performance is, well, very poor for anything other than large reads.
 
 I was expecting a hit to IOP/s performance as you would with any clustered, network file system, but I wasn't expecting it to drop as much as it did, especially after enabling the above performance options on the volumes.
 
-![gluster perf vs native.jpg]({{site.baseurl}}/_drafts/gluster perf vs native.jpg)
+![gluster perf vs native.jpg]({{site.baseurl}}/img/gluster perf vs native.jpg)
 
 ### Sequential Read
 
