header data for gluster

--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -1,5 +1,15 @@
 ---
-published: false
+title: GlusterFS
+date: 2017-09-25
+categories: tech
+layout: post-sidebar
+author_name : Sam McLeod
+author_url : /author/sam
+author_avatar: sam
+author_avatar: sam
+# show_related_posts: true
+show_avatar : false
+feature_image: backdrop-bridge
 ---
 
 We're in the process of shifting from using our [custom 'glue'][1] for orchestrating Docker deployments to Kubernetes.
