--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -9,7 +9,7 @@ author_avatar: sam
 author_avatar: sam
 # show_related_posts: true
 show_avatar : false
-feature_image: backdrop-bridge
+feature_image: backdrop-insidebuilding
 ---
 
 We're in the process of shifting from using our [custom 'glue'][1] for orchestrating Docker deployments to Kubernetes.
@@ -22,13 +22,13 @@ I spent time evaluating various cluster filesystems / network block storage and 
 
 I settled on Gluster as the most suitable for our needs, it's far less complex to deploy than Ceph, it has less moving pieces and files are stored in a familiar manner on hosts.
 
-## Implementation
+### Implementation
 
 I've settled on a 3 node deployment with one node as an [arbiter](http://docs.gluster.org/en/latest/Administrator%20Guide/arbiter-volumes-and-quorum/) (replica 3, arbiter 1).
 
 Our nodes are CentOS 7 VMs within our exiting XenServer infrastructure, each node has 8 vCPUs [Xeon E5-2680 v4](https://ark.intel.com/products/91754/Intel-Xeon-Processor-E5-2680-v4-35M-Cache-2_40-GHz), 16GB of RAM and backed by our [iSCSI SSD Storage](https://smcleod.net/tech/ssd-storage-cluster-diagram/).
 
-## Automation / Puppet
+### Automation / Puppet
 
 We're long time, heavy users of Puppet so naturally I'm deploying Gluster via a [Puppet module](https://github.com/voxpupuli/puppet-gluster) and generating volumes and volume configuration from [Hiera](https://docs.puppet.com/hiera/).
 
@@ -82,7 +82,7 @@ sysctl::base::values:
     comment: 'Increase kernel socket backlog limit for gluster'
 {% endhighlight %}
 
-## Performance
+### Performance
 
 Performance is, well, very poor for anything other than large reads.
 
@@ -90,7 +90,7 @@ I was expecting a hit to IOP/s performance as you would with any clustered, netw
 
 ![gluster perf vs native.jpg]({{site.baseurl}}/img/gluster perf vs native.jpg)
 
-### Sequential Read
+#### Sequential Read
 
 Acceptable performance at 380MB/s:
 
@@ -113,7 +113,7 @@ Run status group 0 (all jobs):
    READ: io=5120.0MB, aggrb=310321KB/s, minb=310321KB/s, maxb=310321KB/s, mint=16895msec, maxt=16895msec
 {% endhighlight %}
 
-### Sequential Write
+#### Sequential Write
 
 A terrible average of 25.6MB/s:
 
@@ -126,7 +126,7 @@ test: Laying out IO file(s) (1 file(s) / 5120MB)
 Jobs: 1 (f=1): [W(1)] [18.9% done] [0KB/25600KB/0KB /s] [0/25/0 iops] [eta 01m:43s]
 {% endhighlight %}
 
-### 4K Write IOP/s
+#### 4K Write IOP/s
 
 A terrible average of 684 IOP/s: 
 
@@ -138,7 +138,7 @@ Starting 1 process
 Jobs: 1 (f=1): [w(1)] [1.2% done] [0KB/2736KB/0KB /s] [0/684/0 iops] [eta 34m:53s]
 {% endhighlight %}
 
-### 4K Read IOP/s
+#### 4K Read IOP/s
 
 A terrible average of 3017 IOP/s:
 
@@ -150,9 +150,9 @@ Starting 1 process
 Jobs: 1 (f=1): [r(1)] [5.6% done] [12068KB/0KB/0KB /s] [3017/0/0 iops] [eta 07m:20s]
 {% endhighlight %}
 
-## Annoyances
+### Annoyances
 
-### Open Files
+#### Open Files
 
 Gluster seems to love open file handles, on an average node in the cluster with 120 small volumes connected to 3 fuse clients and no files I often see up to 1.5 _million_ open files:
 
@@ -164,7 +164,7 @@ root@int-gluster-01:~  # netstat -lnp|grep gluster|wc -l
 111
 {% endhighlight %}
 
-### Inconsistant Configuration
+#### Inconsistant Configuration
 
 A big gripe I have is with the location of cluster and volume configuration, it is kept in a number of different files and file locations, for example:
 
@@ -179,7 +179,7 @@ A big gripe I have is with the location of cluster and volume configuration, it 
 
 This makes managing the cluster and volumes with automation tools a bit of a pain and thus most tooling calls out to the `gluster` command line application to set and read configuration which is not ideal.
 
-### Memory Usage & Leaks
+#### Memory Usage & Leaks
 
 Along the way with Gluster from version 3.10 to 3.12 I've encountered _many_ memory leaks resulting in OOMs, corrupt volume configuration and often entire cluster rebuilds.
 
@@ -187,7 +187,7 @@ A lot of these seem to occur when making a large number of changes to volume con
 
 Often when Gluster runs out of memory and gets OOM killed, it corrupts `.vol` or `.info` files in `/var/lib/glusterd/vols/<volumes>/`, this causes the daemon to fail to start, requires you to hunt through logs for mentions of incorrectly configured volumes, delete the files in question and hope that they correctly sync back from another node, if they don't or can't be synced back it seems you might have to destroy the volumes (or cluster) and recreate them before restoring your (brick) data from backups - this is not at all fun.
 
-### Poor Gluster CLI Performance
+#### Poor Gluster CLI Performance
 
 Again, because of the nature of cluter and volume configuration automation often has to call out to use the Gluster CLI tool to set or get information, this is made especially painful due to the tools performance - notibly how long it takes to set / get options on volumes.
 
@@ -195,10 +195,10 @@ Setting a volume option on average takes around 1 second and the tool cannot set
 
 This quickly adds up, suppose you have 200 volumes and you're setting 5 options on each volume, `200*5=1000 / 60` - that's _16.6 minutes just to set the options!_, this could be a real issue when recovering from a disaster scenario.
 
-### Broken Links to Gluster.org and Gluster.readthedocs.io
+#### Broken Links to Gluster.org and Gluster.readthedocs.io
 
 Many times I've clicked on links to Gluster articles or documentation and have found them to be broken, it seems that Gluster.org has undergone changes and has not created redirects for existing permalinks.
 
-## Notes
+### Notes
 
 [1] When we first deployed Docker to replace LXC and our legacy Puppet-heavy application configuration and deployment systems there really wasn't any existing tool to manage this, thus we rolled our own, mainly a few Ruby scripts combined with a Puppet / Hiera / Mcollective driven workflow.
