header data for gluster

--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -22,13 +22,13 @@ I spent time evaluating various cluster filesystems / network block storage and 
 
 I settled on Gluster as the most suitable for our needs, it's far less complex to deploy than Ceph, it has less moving pieces and files are stored in a familiar manner on hosts.
 
-### Implementation
+## Implementation
 
 I've settled on a 3 node deployment with one node as an [arbiter](http://docs.gluster.org/en/latest/Administrator%20Guide/arbiter-volumes-and-quorum/) (replica 3, arbiter 1).
 
 Our nodes are CentOS 7 VMs within our exiting XenServer infrastructure, each node has 8 vCPUs [Xeon E5-2680 v4](https://ark.intel.com/products/91754/Intel-Xeon-Processor-E5-2680-v4-35M-Cache-2_40-GHz), 16GB of RAM and backed by our [iSCSI SSD Storage](https://smcleod.net/tech/ssd-storage-cluster-diagram/).
 
-### Automation / Puppet
+## Automation / Puppet
 
 We're long time, heavy users of Puppet so naturally I'm deploying Gluster via a [Puppet module](https://github.com/voxpupuli/puppet-gluster) and generating volumes and volume configuration from [Hiera](https://docs.puppet.com/hiera/).
 
@@ -82,7 +82,7 @@ sysctl::base::values:
     comment: 'Increase kernel socket backlog limit for gluster'
 {% endhighlight %}
 
-### Performance
+## Performance
 
 Performance is, well, very poor for anything other than large reads.
 
@@ -150,7 +150,7 @@ Starting 1 process
 Jobs: 1 (f=1): [r(1)] [5.6% done] [12068KB/0KB/0KB /s] [3017/0/0 iops] [eta 07m:20s]
 {% endhighlight %}
 
-### Annoyances
+## Annoyances
 
 #### Open Files
 
@@ -199,6 +199,6 @@ This quickly adds up, suppose you have 200 volumes and you're setting 5 options 
 
 Many times I've clicked on links to Gluster articles or documentation and have found them to be broken, it seems that Gluster.org has undergone changes and has not created redirects for existing permalinks.
 
-### Notes
+## Notes
 
 [1] When we first deployed Docker to replace LXC and our legacy Puppet-heavy application configuration and deployment systems there really wasn't any existing tool to manage this, thus we rolled our own, mainly a few Ruby scripts combined with a Puppet / Hiera / Mcollective driven workflow.
