header data for gluster

--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -12,15 +12,11 @@ show_avatar : false
 feature_image: backdrop-insidebuilding
 ---
 
-We're in the process of shifting from using our [custom 'glue'][1] for orchestrating Docker deployments to Kubernetes.
+We're in the process of shifting from using our custom 'glue' for orchestrating Docker deployments to Kubernetes, When we first deployed Docker to replace LXC and our legacy Puppet-heavy application configuration and deployment systems there really wasn't any existing tool to manage this, thus we rolled our own, mainly a few Ruby scripts combined with a Puppet / Hiera / Mcollective driven workflow.
 
-The main objective is to replace our legacy NFS file servers used to host uploads / attachments and static files for our web applications.
+The main objective is to replace our legacy NFS file servers used to host uploads / attachments and static files for our web applications, while NFS(v4) performance is adequate, it is a clear single point of failure and of course, there are the age old stale mount problems should network interruptions occur.
 
-While NFS(v4) performance is adequate, it is a clear single point of failure and of course, there are the age old stale mount problems should network interruptions occur.
-
-I spent time evaluating various cluster filesystems / network block storage and the two that stood out were Ceph and Gluster.
-
-I settled on Gluster as the most suitable for our needs, it's far less complex to deploy than Ceph, it has less moving pieces and files are stored in a familiar manner on hosts.
+I spent time evaluating various cluster filesystems / network block storage and the two that stood out were Ceph and Gluster and settled on Gluster as the most suitable for our needs, it's far less complex to deploy than Ceph, it has less moving pieces and files are stored in a familiar manner on hosts.
 
 ## Implementation
 
@@ -198,7 +194,3 @@ This quickly adds up, suppose you have 200 volumes and you're setting 5 options 
 #### Broken Links to Gluster.org and Gluster.readthedocs.io
 
 Many times I've clicked on links to Gluster articles or documentation and have found them to be broken, it seems that Gluster.org has undergone changes and has not created redirects for existing permalinks.
-
-## Notes
-
-[1] When we first deployed Docker to replace LXC and our legacy Puppet-heavy application configuration and deployment systems there really wasn't any existing tool to manage this, thus we rolled our own, mainly a few Ruby scripts combined with a Puppet / Hiera / Mcollective driven workflow.
