add post on Joels hp 4951

--- a/_posts/2017-12-27-hp-4951.md
+++ b/_posts/2017-12-27-hp-4951.md
@@ -31,3 +31,7 @@ Joel's specimen:
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/hp_4951/hp4951-2.jpeg?raw=true)
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/hp_4951/hp4951-3.jpeg?raw=true)
+
+And the original spec sheet:
+
+![](https://github.com/sammcj/smcleod_files/blob/master/images/hp_4951/4951C-spec.jpeg?raw=true)
