add post albums of 2017

--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -10,7 +10,7 @@ author_avatar: sam
 author_avatar: sam
 # show_related_posts: true
 show_avatar : false
-feature_image: backdrop-austria
+feature_image: backdrop-linn
 ---
 
 Here's my top album pics for 2017, in no paticular order.
