add post albums of 2017

--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -13,7 +13,7 @@ show_avatar : false
 feature_image: backdrop-linn
 ---
 
-Here are my top album pics for 2017 (in no particular order).
+Here are my top album pics for 2017 (in no particular order)
 
 ### Father John Misty - [Pure Comedy](https://en.wikipedia.org/wiki/Pure_Comedy)
 
