--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -27,6 +27,7 @@ From [Wikipedia](https://en.wikipedia.org/wiki/Pure_Comedy):
 
 >>   Pure Comedy is the story of a species born with a half-formed brain. The species’ only hope for survival, finding itself on a cruel, unpredictable rock surrounded by other species who seem far more adept at this whole thing (and to whom they are delicious), is the reliance on other, slightly older, half-formed brains. This reliance takes on a few different names as their story unfolds, like “love,” “culture,” “family,” etc. Over time, and as their brains prove to be remarkably good at inventing meaning where there is none, the species becomes the purveyor of increasingly bizarre and sophisticated ironies. These ironies are designed to help cope with the species’ loathsome vulnerability and to try and reconcile how disproportionate their imagination is to the monotony of their existence.
 
+
 ### Ibeyi - [Ash](http://www.ibeyi.fr/)
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/albums_2017/Ibeyi-Ash-Cover.jpg?raw=true)
@@ -35,13 +36,15 @@ From [Wikipedia](https://en.wikipedia.org/wiki/Ibeyi):
 
 > Ibeyi is a French-Cuban musical duo consisting of twin sisters Lisa-Kaindé Diaz and Naomi Diaz (both 22 years old). The duo sings in English, French, Spanish and Yoruba, a Nigerian language spoken in West Africa and spoken by their ancestors before being taken to Cuba as slaves in the 1700s. Lisa is the lead singer and plays the piano; Naomi plays traditional Peruvian/Cuban percussion instruments cajón and Batá drum. Their music has elements of Yoruba, French and Afro-Cuban, and fuses jazz with beats, samples with traditional instruments.
 
+
 ### Wu-Tang Clan - [The Saga Continues](https://en.wikipedia.org/wiki/The_Saga_Continues_(Wu-Tang_Clan_album))
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/albums_2017/Wu-Tang_The_Saga_Continues.jpg?raw=true)
 
 From [Wikipedia](https://en.wikipedia.org/wiki/The_Saga_Continues_(Wu-Tang_Clan_album)):
 
-> The Saga Continues is the seventh studio album by Wu-Tang Clan, produced by long-time producer Mathematics released on October 13, 2017 on eOne. [1][2] The Saga Continues was mixed by Josh Gannet. [3] The group name was shortened to "Wu-Tang" to mark the fact that the album features all Wu-Tang Clan members except U-God due to his legal issues with the group over royalties.[4] It also features guest appearance from Streetlife, Redman, Sean Price and others. Producer Mathematics has explained, "It's a Wu-Tang record of course, [but] it can't be a complete Wu-Tang Clan album without [U-God]."[5]
+> The Saga Continues is the seventh studio album by Wu-Tang Clan, produced by long-time producer Mathematics released on October 13, 2017 on eOne. The Saga Continues was mixed by Josh Gannet. The group name was shortened to "Wu-Tang" to mark the fact that the album features all Wu-Tang Clan members except U-God due to his legal issues with the group over royalties. It also features guest appearance from Streetlife, Redman, Sean Price and others. Producer Mathematics has explained, "It's a Wu-Tang record of course, [but] it can't be a complete Wu-Tang Clan album without [U-God]."
+
 
 ### Floating Toy Warning - [The Machine That Made Us](https://en.wikipedia.org/wiki/The_Machine_That_Made_Us)
 
@@ -53,6 +56,7 @@ From [Wikipedia](https://en.wikipedia.org/wiki/The_Machine_That_Made_Us):
 
 Available on [Bandcamp](https://talitres.bandcamp.com/album/the-machine-that-made-us)
 
+
 ### The Weather Station - [The Weather Station](http://www.theweatherstation.net/)
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/albums_2017/the-weather-station.jpg?raw=true)
@@ -60,6 +64,7 @@ Available on [Bandcamp](https://talitres.bandcamp.com/album/the-machine-that-mad
 From [Wikipedia](https://en.wikipedia.org/wiki/The_Weather_Station) _(Note: somewhat outdated information)_
 
 > The Weather Station is a Canadian folk music band fronted by Tamara Lindeman, formed in 2006. The band membership has changed over the years, but now includes Lindeman, with Ben Whiteley on bass, Adrian Cook on pedal steel, and Ian Kehoe on drums.
+
 
 ### The War On Drugs - [A Deeper Understanding](https://en.wikipedia.org/wiki/A_Deeper_Understanding)
 
