--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -15,6 +15,8 @@ feature_image: backdrop-linn
 
 Here are my top album pics for 2017 (in no particular order)
 
+_Note: This is by no means an exhaustive list, it’s just the top albums that really stood out to me and in all fairness, I’ve thought of several others since so there may be a follow up post (or two)._
+
 ### Father John Misty - [Pure Comedy](https://en.wikipedia.org/wiki/Pure_Comedy)
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/albums_2017/FJM_PureComedy_Covers.gif?raw=true)
