fix 24 month talk link

--- a/_posts/2015-02-15-talk-24-months.md
+++ b/_posts/2015-02-15-talk-24-months.md
@@ -17,4 +17,4 @@ The way we work at Infoxchange has changed greatly.
 
 A retrospective journey into transforming Infoxchange’s technology and culture over the past 24 months - presented a Melbourne DevOps – December 2014
 
-[![Click to Start Slides]({{ site.url }}/img/misc/24months.jpg)](https://smcleod.net/files/24_Months.pdf)
+[![Click to Start Slides]({{ site.url }}/img/misc/24months.jpg)](https://github.com/sammcj/smcleod_files/blob/master/slides/24_months/24_Months.pdf?raw=true)
