--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -5,7 +5,7 @@ categories: tech
 layout: post
 author_url : /author/sam
 image: img/backdrop-insidebuilding.jpg
-featured: true
+featured: false
 ---
 
 We're in the process of shifting from using our custom 'glue' for orchestrating Docker deployments to Kubernetes, When we first deployed Docker to replace LXC and our legacy Puppet-heavy application configuration and deployment systems there really wasn't any existing tool to manage this, thus we rolled our own, mainly a few Ruby scripts combined with a Puppet / Hiera / Mcollective driven workflow.
