add description to all posts

--- a/_posts/2015-03-15-kernel-ci.md
+++ b/_posts/2015-03-15-kernel-ci.md
@@ -1,5 +1,6 @@
 ---
 title: Continuous integration for the Linux Kernel - Built within Docker
+excerpt: Continuous integration for the Linux Kernel - Built within Docker
 date: 2015-03-15
 categories: tech
 author_url : /author/sam
