--- a/_posts/2017-12-27-hp-4951.md
+++ b/_posts/2017-12-27-hp-4951.md
@@ -1,5 +1,6 @@
 ---
 title: HP 4951C Protocol Analyser
+excerpt: HP 4951C Protocol Analyser
 date: 2017-12-27
 categories: tech
 author_url : /author/sam
