--- a/_posts/2020-10-10-apps-of-2020.md
+++ b/_posts/2020-10-10-apps-of-2020.md
@@ -1,5 +1,6 @@
 ---
 title: The Best Of - 2020 Edition
+excerpt: The Best Of - 2020 Edition
 date: '2020-10-10 16:00:00'
 categories: tech
 author_url : /author/sam
