--- a/_posts/2020-11-08-ferrari-f12.md
+++ b/_posts/2020-11-08-ferrari-f12.md
@@ -1,5 +1,6 @@
 ---
 title: Ferrari F12 Berlinetta
+excerpt: Ferrari F12 Berlinetta
 date: '2020-11-08 16:00:00'
 categories: cars
 author_url: "/author/sam"
