--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -1,5 +1,6 @@
 ---
 title: Top album picks for 2017
+excerpt: Top album picks for 2017
 date: 2017-12-28
 categories: music
 author_url : /author/sam
