--- a/_posts/2015-02-15-talk-24-months.md
+++ b/_posts/2015-02-15-talk-24-months.md
@@ -6,6 +6,11 @@ categories: tech
 author_url : /author/sam
 header:
   teaser: img/melbourne.jpg
+tags:
+  - talk
+  - tech
+  - devops
+  - career
 ---
 
 ![](/img/melbourne.jpg)
