--- a/_posts/2017-09-25-GlusterFS-3-12-1.md
+++ b/_posts/2017-09-25-GlusterFS-3-12-1.md
@@ -1,12 +1,16 @@
 ---
 title: GlusterFS
-excerpt: GlusterFS
+excerpt: "Using, Scaling and Automating GlusterFS"
 date: 2017-09-25
 categories: tech
 author_url : /author/sam
 header:
   teaser: img/backdrop-insidebuilding.jpg
 featured: false
+tags:
+  - tech
+  - storage
+  - software
 ---
 
 ![](/img/backdrop-insidebuilding.jpg)
