--- a/_posts/2017-12-28-album-picks-2017.md
+++ b/_posts/2017-12-28-album-picks-2017.md
@@ -6,6 +6,8 @@ categories: music
 author_url : /author/sam
 header:
   teaser: img/backdrop-linn.jpg
+tags:
+  - music
 ---
 
 ![](/img/backdrop-linn.jpg)
