--- a/_posts/2020-10-10-apps-of-2020.md
+++ b/_posts/2020-10-10-apps-of-2020.md
@@ -1,12 +1,15 @@
 ---
 title: The Best Of - 2020 Edition
-excerpt: The Best Of - 2020 Edition
+excerpt: "The best (and worst) apps and services from 2020"
 date: '2020-10-10 16:00:00'
 categories: tech
 author_url : /author/sam
 header:
   teaser: img/william-hook-unsplash.jpg
 featured: false
+tags:
+  - bestof
+  - software
 ---
 
 ![](/img/william-hook-unsplash.jpg)
