--- a/_posts/2020-11-08-ferrari-f12.md
+++ b/_posts/2020-11-08-ferrari-f12.md
@@ -1,12 +1,15 @@
 ---
 title: Ferrari F12 Berlinetta
-excerpt: Ferrari F12 Berlinetta
+excerpt: "Last weekend I had a chance encounter with a Ferrari F12 Berlinetta [Photos]"
 date: '2020-11-08 16:00:00'
 categories: cars
 author_url: "/author/sam"
 header:
   teaser: img/f12b_compressed.jpg
 featured: true
+tags:
+  - photos
+  - cars
 ---
 
 ![](/img/f12b_compressed.jpg)
