--- a/_posts/2016-01-29-askizzy.md
+++ b/_posts/2016-01-29-askizzy.md
@@ -6,6 +6,9 @@ categories: tech
 author_url : /author/sam
 header:
   teaser: img/melbourne.jpg
+tags:
+  - tech
+  - career
 ---
 
 ![](/img/melbourne.jpg)
