--- a/_posts/2017-12-27-hp-4951.md
+++ b/_posts/2017-12-27-hp-4951.md
@@ -6,6 +6,9 @@ categories: tech
 author_url : /author/sam
 header:
   teaser: img/backdrop-hp4951.jpg
+tags:
+  - tech
+  - hardware
 ---
 
 ![](/img/backdrop-hp4951.jpg)
