change home to grid photo layout, add navigation in posts

--- a/_posts/2020-11-08-ferrari-f12.md
+++ b/_posts/2020-11-08-ferrari-f12.md
@@ -16,6 +16,8 @@ tags:
 
 Last weekend I had a chance encounter with a [Ferrari F12 Berlinetta](https://en.wikipedia.org/wiki/Ferrari_F12) and the very kind owner who let me experience his very rare and precious car.
 
+## Specs
+
 - 6.3L v12
 - 544 KW (740 Horsepower)
 - 690 Nm at 6000RPM
@@ -24,6 +26,8 @@ Last weekend I had a chance encounter with a [Ferrari F12 Berlinetta](https://en
 - 0-200 in 8.5s
 - Maximum speed: 'over 340 km/h'
 - Was ['The fastest road car Ferrari ever built'](https://web.archive.org/web/20121228015009/http://www.ferrari.com/english/gt_sport%20cars/gt/pages/120229-car-announcing-the-f12berlinetta-the-fastest-ferrari-ever-built.aspx)
+
+## Photos
 
 ![](https://github.com/sammcj/smcleod_files/blob/master/images/ferrari_f12/F12B_1.jpeg?raw=true)
 
