--- a/_posts/2020-11-08-ferrari-f12.md
+++ b/_posts/2020-11-08-ferrari-f12.md
@@ -14,7 +14,7 @@ tags:
 
 ![](/img/f12b_compressed.jpg)
 
-Last weekend I had a chance encounter with a [Ferrari F12 Berlinetta](https://en.wikipedia.org/wiki/Ferrari_F12) and the very kind owner who let me experience his very rare and precious car.
+Last weekend I had a chance encounter with a [Ferrari F12 Berlinetta](https://en.wikipedia.org/wiki/Ferrari_F12) and the owner kindly let me jump in and take a few photos.
 
 ## Specs
 
