Add initial dalle2 post

--- a/_posts/2022-07-08-dalle-2.md
+++ b/_posts/2022-07-08-dalle-2.md
@@ -2,7 +2,7 @@
 title: 'DALL·E 2 - Selected works'
 excerpt: "Over the past month I've been playing with OpenAI's DALL·E 2, below are some of the  interesting images I've generated."
 date: '2022-07-08 07:00:00'
-categories: music, general, art, ML, AI
+categories: machine-learning
 author_url: '/author/sam'
 header:
   teaser: 'img/dalle2spaceorange.jpeg'
