--- a/_posts/2022-10-19-apps-of-2022.md
+++ b/_posts/2022-10-19-apps-of-2022.md
@@ -1,6 +1,6 @@
 ---
 title: The Best Of - 2022 Edition
-excerpt: "Apps I've enjoyed using in 2022"
+excerpt: "Near the end of each year I note down a summary of the best apps I've enjoyed using throughout the year, here's 2022."
 date: '2022-10-18 19:00:00'
 categories: tech
 author_url : /author/sam
@@ -14,7 +14,7 @@ tags:
 
 ![](/img/tools.jpg)
 
-Near the end of every year I note down a summary of the best apps I've enjoyed using throughout the year, here's 2022.
+Near the end of each year I note down a summary of the best apps I've enjoyed using throughout the year, here's 2022.
 
 *See also [Firefox Addons - 2022](https://smcleod.net/software/2022/05/16/firefox-addons-2022/)*
 
