chore(admonitions): bump admon

--- a/themes/hugo-admonitions/i18n/sw.yaml
+++ b/themes/hugo-admonitions/i18n/sw.yaml
@@ -12,7 +12,7 @@ admonitions:
   important: Muhimu
   memo: Memo
   note: Kumbuka
-  notify: Arifa
+  notify: Arifu
   question: Swali
   quote: Nukuu
   success: Mafanikio
